[gd_scene load_steps=9 format=2]

[ext_resource path="res://Data/Texture/image_2023-05-02_14-31-17.png" type="Texture" id=1]
[ext_resource path="res://Entity/Scene2/Scene2.gd" type="Script" id=2]
[ext_resource path="res://Entity/Scene2/Man.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entity/Scene2/Starosta.tscn" type="PackedScene" id=4]
[ext_resource path="res://Data/Sprites/MiniBear.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 362, 36.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 45.5, 14.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 14.5 )

[node name="Scene2" type="Node2D"]
script = ExtResource( 2 )

[node name="Image2023-05-0214-31-17" type="Sprite" parent="."]
position = Vector2( -0.000640869, 5.00003 )
scale = Vector2( 0.198958, 0.187963 )
texture = ExtResource( 1 )

[node name="Man1" parent="." instance=ExtResource( 3 )]
position = Vector2( -237, 13 )

[node name="Man2" parent="." instance=ExtResource( 3 )]
position = Vector2( -66, -55 )

[node name="Man3" parent="." instance=ExtResource( 3 )]
position = Vector2( 62, -14 )

[node name="Starosta" parent="." instance=ExtResource( 4 )]
position = Vector2( 220, -51 )

[node name="Bottom" type="StaticBody2D" parent="."]
position = Vector2( -0.000640869, 3.05176e-05 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2( 0, 172.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Bottom"]
position = Vector2( 2.00064, 128 )
scale = Vector2( 34.9453, 1.90625 )
texture = ExtResource( 5 )
hframes = 10
vframes = 8

[node name="House" type="StaticBody2D" parent="."]
position = Vector2( -0.000640869, 3.05176e-05 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="House"]
position = Vector2( -105.999, -13 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="House"]
position = Vector2( -263.999, 61 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="House"]
position = Vector2( 52, 27.5 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="House"]
position = Vector2( 245, -0.500015 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="House"]
position = Vector2( -262.999, 43 )
scale = Vector2( 4.73633, 0.570313 )
texture = ExtResource( 5 )
hframes = 10
vframes = 8

[node name="Sprite2" type="Sprite" parent="House"]
position = Vector2( -104.999, -30 )
scale = Vector2( 4.73633, 0.570313 )
texture = ExtResource( 5 )
hframes = 10
vframes = 8

[node name="Sprite3" type="Sprite" parent="House"]
position = Vector2( 59.3913, 11 )
scale = Vector2( 3.77441, 0.570313 )
texture = ExtResource( 5 )
hframes = 10
vframes = 8

[node name="Sprite4" type="Sprite" parent="House"]
position = Vector2( 247.001, -19 )
scale = Vector2( 4.73633, 0.570313 )
texture = ExtResource( 5 )
hframes = 10
vframes = 8

[node name="Gentleman_incoming" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="Gentle_pos" type="Position2D" parent="."]
position = Vector2( -401, 133 )

[node name="Down_starosta" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="Gentleman_incoming" to="." method="_on_Gentleman_incoming_timeout"]
[connection signal="timeout" from="Down_starosta" to="." method="_on_Down_starosta_timeout"]
